jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_if_else_if_statement.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        kind: If,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 0,
            end: 2,
        },
    },
    Token {
        kind: LeftParen,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 2,
            end: 3,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 3,
            end: 4,
        },
    },
    Token {
        kind: EqualEqual,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 5,
            end: 7,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 8,
            end: 9,
        },
    },
    Token {
        kind: RightParen,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 9,
            end: 10,
        },
    },
    Token {
        kind: LeftBrace,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 11,
            end: 12,
        },
    },
    Token {
        kind: Return,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 13,
            end: 19,
        },
    },
    Token {
        kind: Integer,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 20,
            end: 21,
        },
    },
    Token {
        kind: Semi,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 21,
            end: 22,
        },
    },
    Token {
        kind: RightBrace,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 23,
            end: 24,
        },
    },
    Token {
        kind: Else,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 25,
            end: 29,
        },
    },
    Token {
        kind: LeftBrace,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 30,
            end: 31,
        },
    },
    Token {
        kind: Return,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 32,
            end: 38,
        },
    },
    Token {
        kind: Integer,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 39,
            end: 40,
        },
    },
    Token {
        kind: Semi,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 40,
            end: 41,
        },
    },
    Token {
        kind: RightBrace,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 42,
            end: 43,
        },
    },
    Token {
        kind: Eof,
        span: Span {
            file: "test_tokenize_if_else_if_statement",
            module: "module/test_tokenize_if_else_if_statement",
            start: 43,
            end: 43,
        },
    },
]
