jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_keywords.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        kind: Let,
        span: Span {
            file: "test_tokenize_keywords",
            module: "module/test_tokenize_keywords",
            start: 0,
            end: 3,
        },
    },
    Token {
        kind: False,
        span: Span {
            file: "test_tokenize_keywords",
            module: "module/test_tokenize_keywords",
            start: 4,
            end: 9,
        },
    },
    Token {
        kind: True,
        span: Span {
            file: "test_tokenize_keywords",
            module: "module/test_tokenize_keywords",
            start: 10,
            end: 14,
        },
    },
    Token {
        kind: Return,
        span: Span {
            file: "test_tokenize_keywords",
            module: "module/test_tokenize_keywords",
            start: 15,
            end: 21,
        },
    },
    Token {
        kind: Function,
        span: Span {
            file: "test_tokenize_keywords",
            module: "module/test_tokenize_keywords",
            start: 22,
            end: 30,
        },
    },
    Token {
        kind: Eof,
        span: Span {
            file: "test_tokenize_keywords",
            module: "module/test_tokenize_keywords",
            start: 30,
            end: 30,
        },
    },
]
