jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_less_than_equal.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        kind: LessEqual,
        span: Span {
            file: "test_tokenize_less_than_equal",
            module: "module/test_tokenize_less_than_equal",
            start: 0,
            end: 2,
            [content]: "<=",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            file: "test_tokenize_less_than_equal",
            module: "module/test_tokenize_less_than_equal",
            start: 2,
            end: 2,
            [content]: "",
        },
    },
]
