jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_let_assignment.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        kind: Let,
        span: Span {
            file: "test_tokenize_let_assignment",
            module: "module/test_tokenize_let_assignment",
            start: 0,
            end: 3,
            [content]: "let",
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            file: "test_tokenize_let_assignment",
            module: "module/test_tokenize_let_assignment",
            start: 4,
            end: 5,
            [content]: "a",
        },
    },
    Token {
        kind: Equal,
        span: Span {
            file: "test_tokenize_let_assignment",
            module: "module/test_tokenize_let_assignment",
            start: 6,
            end: 7,
            [content]: "=",
        },
    },
    Token {
        kind: Integer,
        span: Span {
            file: "test_tokenize_let_assignment",
            module: "module/test_tokenize_let_assignment",
            start: 8,
            end: 10,
            [content]: "99",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            file: "test_tokenize_let_assignment",
            module: "module/test_tokenize_let_assignment",
            start: 10,
            end: 10,
            [content]: "",
        },
    },
]
