jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_number.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "42",
        offset: 0,
        kind: Integer,
    },
]
