jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_numbers_with_whitespace.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "4",
        offset: 3,
        kind: Integer,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "2",
        offset: 6,
        kind: Integer,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "",
        offset: 10,
        kind: Eof,
    },
]
