jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_parens.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "(",
        offset: 0,
        kind: LeftParen,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: ")",
        offset: 1,
        kind: RightParen,
    },
]
