jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_plus_plus_and_minus_minus.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "x",
        offset: 0,
        kind: Identifier,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "++",
        offset: 1,
        kind: PlusPlus,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: ";",
        offset: 3,
        kind: Semi,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "y",
        offset: 5,
        kind: Identifier,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "--",
        offset: 6,
        kind: MinusMinus,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "",
        offset: 8,
        kind: Eof,
    },
]
