jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_semi_colon.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        file: "test.1",
        lexme: ";",
        offset: 0,
        kind: Semi,
    },
]
